--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ice Cream Website</title>
 
+  
+<link rel="icon" href="favicon-32x32.png">
  
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous" />
 
   <!-- Optional icons (Font Awesome) -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" /> 
+
+
 
   <style>
     img {
@@ -228,7 +232,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6">
-          <img src="" alt="" class="img-fluid">
+          <img src="https://as2.ftcdn.net/v2/jpg/06/77/03/13/1000_F_677031370_RHe2JxV4gUavFCK1hnRrIHtwlxmZsimI.jpg" alt="" class="img-fluid">
         </div>
         <div class="col-md-6">
           <h1>Winter’s on. Seasonal flavors are, too.</h1>
